--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,5 +1,7 @@
-@import './layout/header.scss';
-@import './layout/footer.scss';
+@import "./utility/reset.scss";
+@import "./utility/base.scss";
 
+@import "./layout/header.scss";
+@import "./layout/footer.scss";
 
-@import './pages/index.scss';
+@import "./pages/index.scss";
