--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,3 +1,134 @@
-.index-title {
-  font-size: 100px;
+.banner {
+  div {
+    position: absolute;
+    left: 200px;
+    top: 289px;
+  }
+
+  background-image: url("https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/banner.png");
+  background-size: cover;
+  background-position: center;
+  height: 800px;
+
+  p {
+    color: white;
+  }
+
+  button {
+    background-color: var(--primary-300);
+    border-radius: 5px;
+    padding: 12px 24px;
+    font-size: 16px;
+    letter-spacing: 0.05em;
+    line-height: 1.5;
+  }
+}
+
+.hot-item-card {
+  p {
+    position: absolute;
+    color: var(--primary-400);
+    font-size: 14px;
+    padding: 8px 12px;
+    background-color: var(--primary-100);
+    left: 0;
+    top: 0;
+  }
+}
+
+.cool-banner {
+  background-image: url("https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/banner-co-branded.png");
+  background-size: cover;
+  background-position: center;
+  color: white;
+  text-align: center;
+  padding: 100px 0;
+
+  h3 {
+    font-size: 48px;
+    line-height: 120%;
+    letter-spacing: 0.05em;
+    margin-bottom: 16px;
+  }
+
+  p:first-of-type {
+    font-size: 32px;
+    line-height: 120%;
+    letter-spacing: 0.05em;
+    margin-bottom: 32px;
+  }
+
+  p:nth-of-type(2) {
+    color: var(--neutral-500);
+    margin-bottom: 48px;
+  }
+
+  button {
+    background-color: var(--primary-300);
+    border-radius: 5px;
+    padding: 12px 24px;
+    font-size: 16px;
+    letter-spacing: 0.05em;
+    line-height: 1.5;
+  }
+
+  span {
+    color: var(--primary-300);
+  }
+}
+
+.chose-shoe {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  color: white;
+  text-align: center;
+
+  h3 {
+    font-size: 28px;
+  }
+
+  p {
+    font-size: 24px;
+  }
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+@media screen and (max-width: 768px) {
+  .banner {
+    background-image: url("https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/banner-sm.png");
+    padding: 64px 0;
+
+    div {
+      top: 155px;
+      left: 24px;
+    }
+  }
+
+  .cut-shoe {
+    width: 80%;
+    right: -50%;
+    position: absolute;
+  }
+
+  .w-md-300 {
+    min-width: 300px;
+  }
+
+  .cool-banner {
+    span {
+      display: block;
+    }
+  }
 }
