--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,4 +1,24 @@
-<h1 class="header">header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a>
+<nav class="nav">
+  <div class="container pl-md-12 pr-md-12">
+    <div class="d-flex justify-content-sb align-items-center">
+      <div class="d-flex">
+        <div class="position-relative">
+          <div class="circle"></div>
+          <h1 class="logo">URBNSTEP</h1>
+        </div>
+
+        <p class="pl-40 pt-12 pb-12 d-md-none"><a href="#">商品列表</a></p>
+        <p class="pl-40 pt-12 pb-12 d-md-none"><a href="#">品牌故事</a></p>
+      </div>
+      <a href="#"><i class="bi bi-person d-block"></i></a>
+    </div>
+  </div>
+  <div class="d-flex justify-content-center text-center">
+    <div class="pt-12 pb-12 w-50 bg-primary-200 d-none d-md-block">
+      商品列表
+    </div>
+    <div class="pt-12 pb-12 w-50 bg-primary-100 d-none d-md-block">
+      品牌故事
+    </div>
+  </div>
+</nav>
