--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,1 +1,22 @@
-<footer class="footer">footert</footer>
+<footer class="mb-64 pl-md-12 pr-md-12">
+  <div class="container">
+    <div
+      class="d-flex justify-content-sb flex-direction-md-column footer-border pb-24"
+    >
+      <h1 class="footer-logo">
+        URBNSTEP
+        <div class="circle"></div>
+      </h1>
+
+      <div class="d-flex pl-md-12 flex-direction-md-column">
+        <p class="pl-40 pl-md-0 pt-12 pb-12"><a href="#">商品列表</a></p>
+        <p class="pl-40 pl-md-0 pt-12 pb-12"><a href="#">品牌故事</a></p>
+      </div>
+    </div>
+
+    <div class="pt-33 text-center">
+      <p class="neutral-600 mb-4">Copyright ©2025 URBNSTYLE</p>
+      <p class="neutral-600">All Rights Reserved.</p>
+    </div>
+  </div>
+</footer>
