--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,4 +1,29 @@
-.footer{
-  background: #69F0AE;
-  font-size: 64px;
+.footer-border {
+  border-bottom: 2px solid var(--neutral-300);
+}
+
+.footer-logo {
+  font-size: 20px;
+  font-weight: 700;
+  width: 129px;
+  position: relative;
+  padding: 8px 12px;
+}
+
+.circle {
+  width: 8px;
+  height: 8px;
+  right: 11px;
+  top: 11px;
+  background-color: var(--primary-300);
+  border-radius: 50%;
+  position: absolute;
+}
+
+.position-relative {
+  position: relative;
+}
+
+.justify-content-sb {
+  justify-content: space-between;
 }
