--- a/assets/scss/utility/base.scss
+++ b/assets/scss/utility/base.scss
@@ -391,6 +391,10 @@ body {
     margin-bottom: 0;
   }
 
+  .pb-md-0 {
+    padding-bottom: 0;
+  }
+
   .pl-md-0 {
     padding-left: 0;
   }
@@ -415,14 +419,14 @@ body {
   }
 
   .pr-md-12 {
-    margin-right: 12px;
+    padding-right: 12px;
   }
 
   .pr-md-6 {
-    margin-right: 6px;
+    padding-right: 6px;
   }
   .pl-md-6 {
-    margin-left: 6px;
+    padding-left: 6px;
   }
 
   .mb-md-12 {
@@ -435,6 +439,10 @@ body {
 
   .mb-md-32 {
     margin-bottom: 32px;
+  }
+
+  .mr-md-32 {
+    margin-right: 32px;
   }
 
   .mb-md-24 {
@@ -491,6 +499,14 @@ body {
 
   .flex-direction-md-column {
     flex-direction: column;
+  }
+
+  .align-items-md-center {
+    align-items: center;
+  }
+
+  .flex-md-nowrap {
+    flex-wrap: nowrap;
   }
 }
 
