Add brand story page and styles
Created brand-story.html with content and structure for the brand story section. Added corresponding SCSS styles in _brand-story.scss and imported them in all.scss. Minor adjustment to section classes in index.html for consistency.

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -7,3 +7,4 @@
 @import "./pages/index.scss";
 @import "./pages/product-list.scss";
 @import "./pages/product-detail.scss";
+@import "./pages/brand-story.scss";
