--- a/assets/scss/pages/_brand-story.scss
+++ b/assets/scss/pages/_brand-story.scss
@@ -261,7 +261,7 @@
 
 @media screen and (max-width: 768px) {
   .brand-stroy {
-    background-image: url("../assets/images/hero-sm.png");
+    background-image: url("https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/hero-sm.png");
   }
 
   .describe-container {
