--- a/assets/scss/pages/_brand-story.scss
+++ b/assets/scss/pages/_brand-story.scss
@@ -229,6 +229,10 @@
   padding-bottom: 24px;
 }
 
+.small-story-container h6 {
+  padding-bottom: 24px;
+}
+
 .small-story-section li {
   margin-bottom: 20px;
 }
