--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -22,6 +22,10 @@
     letter-spacing: 0.05em;
     line-height: 1.5;
   }
+
+  button:hover {
+    background-color: var(--primary-200);
+  }
 }
 
 .hot-item-card {
